; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_io-util.c_iovw_rebase.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_io-util.c_iovw_rebase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iovec_wrapper = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iovw_rebase(%struct.iovec_wrapper* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.iovec_wrapper*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.iovec_wrapper* %0, %struct.iovec_wrapper** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  store i64 0, i64* %7, align 8
  br label %8

8:                                                ; preds = %34, %3
  %9 = load i64, i64* %7, align 8
  %10 = load %struct.iovec_wrapper*, %struct.iovec_wrapper** %4, align 8
  %11 = getelementptr inbounds %struct.iovec_wrapper, %struct.iovec_wrapper* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ult i64 %9, %12
  br i1 %13, label %14, label %37

14:                                               ; preds = %8
  %15 = load %struct.iovec_wrapper*, %struct.iovec_wrapper** %4, align 8
  %16 = getelementptr inbounds %struct.iovec_wrapper, %struct.iovec_wrapper* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = load i64, i64* %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i8*, i8** %20, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = ptrtoint i8* %21 to i64
  %24 = ptrtoint i8* %22 to i64
  %25 = sub i64 %23, %24
  %26 = load i8*, i8** %6, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 %25
  %28 = load %struct.iovec_wrapper*, %struct.iovec_wrapper** %4, align 8
  %29 = getelementptr inbounds %struct.iovec_wrapper, %struct.iovec_wrapper* %28, i32 0, i32 1
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = load i64, i64* %7, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  store i8* %27, i8** %33, align 8
  br label %34

34:                                               ; preds = %14
  %35 = load i64, i64* %7, align 8
  %36 = add i64 %35, 1
  store i64 %36, i64* %7, align 8
  br label %8

37:                                               ; preds = %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
